fix the overflow hidden for itemContainer at ProductItem

--- a/view/src/components/ProductItem/ProductItem.module.css
+++ b/view/src/components/ProductItem/ProductItem.module.css
@@ -1,5 +1,6 @@
 .itemContainer {
   cursor: pointer;
+  overflow: hidden;
 }
 
 .itemContainer:hover {
